# TM

./: README.md  gantt.md
Litterature/: HPC-benchmarks-that-can-run-on-SLURM,-Flux,-Kubernetes-with-Volcano,-and-other-Kubernetes-schedulers-with-minimal-coding-requirements_2025-03-13_02_25_46_export.bib  default.realm
Litterature/notes/: Job Scheduling in HPC.md
Report/: .gitignore  DAnconaOlivier_rapport_MSE_TM_SP25.tex  makefile  references.bib  structure.tex
Report/chapters/: 00_Abstract.tex  01_Introduction.tex  02_StateOfTheArt.tex  03_Analysis.tex  04_Conception.tex  05_Implementation.tex  06_Tests.tex
Workspace/: Benchmarking.md  Bill Long.md  Concepts Ideas.md  Etienne.md  Github.md  Kick-off.md  LOLILOL.md  Metric.md  Metrics.md  Perlmutter Metric Explanation.md  Perlmutter columns.md  Resources Request NERSC.md  Sascha Koenig.md  Sumup.md  TM_Specification_V1.0.0.md  TM_Specification_V2.0.0.md  TODO.md  TOFDO.md  Work Scope.md  data.md
Workspace/.obsidian/: workspace.json
Workspace/Consolidated Blocks/: Declarative vs Imperative Configuration.md  Kubernetes Problem Join Hostname.md  Slow Iteration cycle.md
Workspace/Saved Discussions/: Resource manager vs Schedulers.md  Schedulers for Heterogeneous Jobs & Accelerators.md
Workspace/concepts/: NUMA.md  Nix.md  libvirt.md
Workspace/conference/: DeepSearch_Publication.md  conference_analyse.ipynb  distributed_computing_conferences.csv  (+1 more)
perlmutter_workload_analysis/: .gitignore  README.md  pyproject.toml
perlmutter_workload_analysis/src/workload_analysis/: Job_traces_description.md  __init__.py  analysis.ipynb  clustering_utils.py  eda_utils.py  ml.py  visualization_utils.py
report/: DAnconaOlivier_rapport_MSE_TM_SP25.tex  acronyms.tex  structure.tex
scheduler_benchmark/: .gitignore  Olivier_log.md  README.md  Specification.md  pyproject.toml
scheduler_benchmark/conf/: config.yaml
scheduler_benchmark/conf/provider/: libvirt.yaml
scheduler_benchmark/conf/topology/: medium.yaml  small.yaml
scheduler_benchmark/nix/: base.nix  flake.nix  lazy.sh  vm-config.nix
scheduler_benchmark/nix/modules/kubernetes/: master.nix  worker.nix
scheduler_benchmark/opentofu/: .terraform.lock.hcl  cloud_init.tftpl  main.tf  terraform.tfstate  terraform.tfstate.backup
scheduler_benchmark/src/scheduler_benchmark/: __init__.py  config_schemas.py  main.py  models.py
scheduler_benchmark/src/scheduler_benchmark/vm/: cloud_init_helper.py  configuration.nix.j2  libvirt_helper.py  nix_helper.py  provision.py
scheduler_benchmark/tests/: test_libvirt_helper.py  test_model.py  test_provision.py
workload_analysis/: pyproject.toml
writer_team/: README.md  agent.py  app.py  config.py  main.py  pyproject.toml  task.py
writer_team/flows/: thesis_flow.py
writer_team/knowledge/: Input.md  TM_Specification.md
writer_team/src/writer_team/: crew.py  main.py
writer_team/src/writer_team/config/: agents.yaml  tasks.yaml
(+86 files in other folders)
