[project]
name = "workload-analysis"
version = "0.1.0"
description = "This notebook identify representative workload classes (e.g., short CPU-bound jobs, GPU-heavy jobs, data-intensive analytics, multi-node MPI jobs, etc.) from Perlmutter job traces."
authors = [
    { name = "Olivier D'Ancona", email = "olivier.dancona@master.hes-so.ch" },
]
dependencies = [
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "numpy>=2.2.3",
    "scikit-learn>=1.6.1",
    "ipykernel>=6.29.5",
    "parquet>=1.3.1",
    "polars>=1.24.0",
    "tqdm>=4.67.1",
    "pyarrow>=19.0.1",
    "ipywidgets>=8.1.5",
    "plotly>=6.0.0",
    "nbformat>=5.10.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/workload_analysis"]
