[project]
name = "scheduler-benchmark"
version = "0.1.0"
description = "Comparative benchmark for different scheduling algorithms"
authors = [
    { name = "Olivier D'Ancona", email = "olivier.dancona@master.hes-so.ch" },
]
dependencies = ["hydra-core>=1.3.2", "ansible>=11.3.0", "colorlog>=6.9.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
