[project]
name = "scheduler-benchmark"
version = "0.1.0"
description = "Comparative benchmark for different scheduling algorithms"
authors = [
    { name = "Olivier D'Ancona", email = "olivier.dancona@master.hes-so.ch" },
]
dependencies = [
    "hydra-core>=1.3.2",
    "ansible>=11.3.0",
    "pydantic>=2.11.1",
    "libvirt-python>=11.1.0",
    "pyyaml>=6.0.2",
    "hydra-colorlog>=1.2.0",
    "jinja2>=3.1.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
]

[project.scripts]
main = "scheduler_benchmark:main"
